moved project logic
