# docs/swagger.json
@@ -309,44 +309,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Create new project",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "project"
-                ],
-                "summary": "Create project",
-                "operationId": "post-project",
-                "parameters": [
-                    {
-                        "description": "Request body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handlers.DonationCreateRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ProjectCreateResponse"
-                        }
-                    }
-                }
             }
         },
         "/project/user/{id}": {
@@ -432,31 +394,6 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Delete not published project",
-                "tags": [
-                    "project"
-                ],
-                "summary": "Delete not published project",
-                "operationId": "delete-project",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Project ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {}
-                }
             }
         },
         "/project_type": {
@@ -508,7 +445,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.extendedUser"
+                            "$ref": "#/definitions/app.ExtendedUser"
                         }
                     }
                 }
@@ -543,7 +480,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.extendedUser"
+                            "$ref": "#/definitions/app.ExtendedUser"
                         }
                     }
                 }
@@ -551,6 +488,38 @@
         }
     },
     "definitions": {
+        "app.ExtendedUser": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "participation": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Participation"
+                    }
+                },
+                "project_count": {
+                    "type": "integer"
+                },
+                "success_rate": {
+                    "type": "number"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.DonationCreateRequest": {
             "type": "object",
             "properties": {
@@ -569,14 +538,6 @@
                     "type": "boolean"
                 },
                 "payment": {
-                    "type": "integer"
-                }
-            }
-        },
-        "handlers.ProjectCreateResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
                     "type": "integer"
                 }
             }
@@ -724,38 +685,6 @@
             "type": "object",
             "properties": {
                 "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.extendedUser": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "participation": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Participation"
-                    }
-                },
-                "project_count": {
-                    "type": "integer"
-                },
-                "success_rate": {
-                    "type": "number"
-                },
-                "username": {
                     "type": "string"
                 }
             }
