# internal/server/http.go
@@ -42,15 +42,15 @@ func New(a app.Application, jwtSecret []byte) *echo.Echo {
 	pt.Use(JWTmiddleware)
 	pt.GET("", hpt.GetProjectTypes)
 
-	// hp := handlers.NewProjectHandler(pModel)
-	// p := e.Group("/project")
-	// p.Use(JWTmiddleware)
-	// p.GET("", hp.GetProjects)
-	// p.GET("/user/:id", hp.GetUserProjects)
-	// p.GET("/:id", hp.GetSingleProject)
-	// p.POST("", hp.CreateProject)
-	// p.PATCH("/:id", hp.UpdateProject)
-	// p.DELETE("/:id", hp.DeleteProject)
+	hp := handlers.NewProjectHandler(a)
+	p := e.Group("/project")
+	p.Use(JWTmiddleware)
+	p.GET("", hp.GetProjects)
+	p.GET("/user/:id", hp.GetUserProjects)
+	p.GET("/:id", hp.GetSingleProject)
+	p.POST("", hp.CreateProject)
+	p.PATCH("/:id", hp.UpdateProject)
+	p.DELETE("/:id", hp.DeleteProject)
 
 	// hd := handlers.NewDonationHandler(models.NewDonationModel(d), b.GetRecalcPipe())
 	// dg := e.Group("/donation")
